Detect key press and compare with level list

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="main-header">
         <h1>genius-<span>dev</span>-edition</h1>
-        <h2>$ type 'start' and let's see what can you do</h2>
+        <h2>$ type 'start' and let's see what you can do</h2>
     </header>
 
     <section class="keyboard">
@@ -57,5 +57,6 @@
         <p>developed by <a href="http://github.com/cauequeiroz/genius-dev-edition">Caue Queiroz</a></p>
     </footer>
 
+    <script src="js/main.js"></script>
 </body>
 </html>
