Create next level function

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <p>developed by <a href="http://github.com/cauequeiroz/genius-dev-edition">Caue Queiroz</a></p>
     </footer>
 
+    <script src="js/ui.js"></script>
+    <script src="js/level.js"></script>
+    <script src="js/keyboard.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
