Add sound effects!

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <p>developed by <a href="http://github.com/cauequeiroz/genius-dev-edition">Caue Queiroz</a></p>
     </footer>
 
+    <script src="js/sound.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/level.js"></script>
     <script src="js/keyboard.js"></script>
