--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div class="line">
             <div class="key space" data-key="space">space</div>
         </div>
+        <div class="hud">
+            <p>level : <strong>0</strong> / 50<span class="best">best: <strong>0</strong></span></p>
+        </div>
     </section>
 
     <footer class="main-footer">
