--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="main-header">
         <h1>genius-<span>dev</span>-edition</h1>
-        <h2>$ type start and let's see what you can do</h2>
+        <h2>$ type start, wait and let's see what you can do</h2>
     </header>
 
     <section class="keyboard">
