Update hud update function

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <div class="key space" data-key="space">space</div>
         </div>
         <div class="hud">
-            <p>level : <strong>0</strong> / 50<span class="best">best: <strong>0</strong></span></p>
+            <p>level : <strong class="current">0</strong> / <span class="max">50</span>
+            <span class="best">best: <strong>0</strong></span></p>
         </div>
     </section>
 
